--- a/Background/index.html
+++ b/Background/index.html
@@ -10,12 +10,37 @@
     <div class="container">
 
         <section class="bg-section">
-            <h2>1. Background color</h2>
+            <h2 class="bg-section-title">1. Background color</h2>
                 <div class="example-row">
-                <div class="example-box-color">Color</div>
-                <div class="example-box-rgba">RGBA</div>
+                    <div class="example-box color">Color</div>
+                    <div class="example-box rgba">RGBA</div>
                 </div>
         </section>
+
+        <section class="bg-section">
+            <h2 class="bg-section-title">1. Background image</h2>
+                <div class="example-row">
+                    <div class="repeated">Repeated</div>
+                    <div class="cover">Cover</div>
+                    <div class="contain">Contain</div>
+                </div>
+            </section>
+
+             <section class="bg-section">
+            <h2 class="bg-section-title">1. Background image</h2>
+                <div class="example-row">
+                    <div class="center">Center</div>
+                    <div class="left">Left</div>
+                    <div class="right">Right</div>
+            </section>
+
+            <section class="bg-section">
+            <h2 class="bg-section-title">1. Background image</h2>
+                <div class="example-row">
+                   <div class="linear">Linear</div>
+                   <div class="radial">Radial</div>
+                   <div class="conic">Conic</div>
+            </section>
 
     </div>
     
