feat: Background corrected

--- a/Background/index.html
+++ b/Background/index.html
@@ -18,7 +18,7 @@
         </section>
 
         <section class="bg-section">
-            <h2 class="bg-section-title">1. Background image</h2>
+            <h2 class="bg-section-title">2. Background image</h2>
                 <div class="example-row">
                     <div class="repeated">Repeated</div>
                     <div class="cover">Cover</div>
@@ -27,7 +27,7 @@
             </section>
 
              <section class="bg-section">
-            <h2 class="bg-section-title">1. Background image</h2>
+            <h2 class="bg-section-title">3. Background positioning</h2>
                 <div class="example-row">
                     <div class="center">Center</div>
                     <div class="left">Left</div>
@@ -35,14 +35,38 @@
             </section>
 
             <section class="bg-section">
-            <h2 class="bg-section-title">1. Background image</h2>
+            <h2 class="bg-section-title">4. Background gradient</h2>
                 <div class="example-row">
                    <div class="linear">Linear</div>
                    <div class="radial">Radial</div>
                    <div class="conic">Conic</div>
             </section>
 
+            <section class="bg-section">
+            <h2 class="bg-section-title">5. Background fixed</h2>
+                <div class="fixed">Fixed</div>
+            </section>
     </div>
+    <div class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic repudiandae eaque architecto vel! Error, ut, dolore dolor reprehenderit, minus hic sint aspernatur ullam itaque saepe qui aliquid nemo repudiandae beatae?
+    Eius eos dolores ipsa facilis harum magni sunt exercitationem eum sequi molestias numquam, ad porro culpa rem aut fugiat. Minus reiciendis rem iusto doloribus alias voluptatibus nobis debitis fugit error.
+    Similique, alias maiores quis minus nam veritatis soluta, adipisci natus quidem sed dolorum! Rem adipisci rerum voluptatem, in at libero aspernatur explicabo. Sed nam blanditiis nostrum, dolorum illum consequatur voluptates!
+    Repudiandae, deleniti neque, rem, quo consectetur dolorum voluptates minima nihil dolor laborum explicabo magnam. Quidem obcaecati officiis maiores numquam, placeat vitae ipsam nobis. Aspernatur illum dolorem ratione nesciunt veniam error?
+    Obcaecati aliquam reiciendis cum dolor, itaque vero quos fugit quasi debitis delectus natus quo ut. Quidem eaque laboriosam dolorem nulla ratione nobis. Voluptatibus illo alias quis ullam ex cupiditate officiis.
+    Explicabo error obcaecati rem in quisquam optio aliquam quaerat velit enim reiciendis quae tenetur porro quos fugiat, inventore, voluptatibus nulla, assumenda perferendis possimus odio ipsa! Iure, reprehenderit repellendus! Dolorum, delectus.
+    Voluptates, velit dignissimos consequatur temporibus pariatur a maxime dolorem minima impedit animi nobis quia expedita vel voluptatem accusantium saepe nemo architecto magnam et eveniet, quam porro cumque. Consequatur, corrupti dolor.
+    Rem eveniet eum at delectus quod, harum doloremque error optio magnam id accusantium dolorum recusandae fugit doloribus quam! Enim consequatur modi aliquam dicta provident aspernatur rem tenetur nisi sit quia!
+    Inventore nisi aperiam voluptatem vero quo sint laboriosam veritatis, sed laborum doloribus facilis ipsum dolorum consequatur saepe tempore. Velit natus similique quis consectetur laudantium commodi hic voluptates nihil dolorem facilis?
+    Dignissimos cum fugiat dicta doloremque molestias! Consequatur vero necessitatibus cumque aut cupiditate odio quis assumenda eligendi quasi neque rem modi aliquam ducimus earum magnam natus ut illum, et culpa repudiandae.
+    Animi libero assumenda nam in corrupti necessitatibus consequuntur, est quia amet, laborum nulla sunt numquam accusantium impedit adipisci hic eaque perferendis voluptates tenetur dignissimos architecto, fugiat veritatis. Unde, officia eaque!
+    Nihil maxime unde hic. Possimus aliquid voluptates mollitia, ea quo nobis repellat amet consequuntur recusandae quisquam excepturi dignissimos dicta voluptate porro eos magni blanditiis quidem veniam nostrum fuga debitis cupiditate?
+    Laborum quaerat, reprehenderit fuga dicta quasi voluptatum quae doloribus accusantium quia consequatur architecto voluptates. Dolorem, in hic. Doloribus ad, voluptas distinctio eius amet placeat quos possimus sunt mollitia, est dolorem!
+    Doloribus officia magni provident voluptatibus mollitia facere est sint a maxime, doloremque nobis voluptatum cum, non possimus voluptate ipsa unde quae eligendi nulla vel! Ea explicabo architecto temporibus autem dolore.
+    Obcaecati hic optio modi quae, expedita, eligendi suscipit quasi eveniet ipsum et minima praesentium cumque. Doloribus deserunt amet officia autem repudiandae quam quas, praesentium, labore expedita temporibus eum ratione distinctio?
+    Perspiciatis eum obcaecati totam, laborum inventore est modi fugiat a. Molestiae dicta maiores iure saepe, reprehenderit perferendis voluptates, aliquam, ea consectetur enim blanditiis perspiciatis. Odit, eius? Minima est cum repellat.
+    Quae earum quasi odit est maxime velit voluptates nesciunt minima, iusto exercitationem sequi esse sunt non placeat illum tenetur eligendi et, recusandae corrupti vitae laborum fuga. Iure veniam quod natus.
+    Doloribus eligendi commodi officia, similique sed nulla voluptate tempora recusandae aspernatur temporibus dolorem. Possimus nulla ad eaque ullam quibusdam molestias laborum corrupti architecto aliquid ducimus eos ut, soluta debitis consectetur.
+    Obcaecati, quisquam. Illum reiciendis, enim voluptatum, quod molestias pariatur provident aperiam, debitis veniam tempore quidem labore quam atque illo voluptas quaerat totam. Voluptatibus dolore provident ab, similique aliquam perspiciatis molestias.
+    Aperiam cupiditate possimus vero aut deleniti! Qui eveniet sunt nulla ullam voluptates unde tempore corrupti fugit dolore nihil. Laborum quae neque provident alias sapiente distinctio culpa inventore totam rem ab.</div>
     
 </body>
 </html>
