gradient and shadows is done

--- a/Gradient and shadow/index.html
+++ b/Gradient and shadow/index.html
@@ -35,6 +35,13 @@
                 <div class="example-box outline-effect">Outline-effect</div>
             </div>
         </section>   
+
+         <section class="main-section">
+            <h2 class="main-section-title">4. Blur filter</h2>
+            <div class="example-row">
+                <div class="example-box blur-filter">Blur filter</div>
+            </div>
+        </section>  
 </body>
 
 </html>
